[tool.poetry]
name = "chaserland-common"
version = "0.1.0"
description = ""
authors = ["ChaserZ98 <feiyuzheng98@gmail.com>"]
readme = "README.md"
packages = [{ include = "chaserland_common", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pycryptodome = "^3.20.0"
grpcio = "^1.62.1"
grpc-interceptor = "^0.15.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--cov=chaserland_common", "--cov-report=term", "--cov-report=html"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
